--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,10 +1,14 @@
+
+
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
-  <h2> <%= restaurant.name %> </h2>
+    <h2> <%= restaurant.name %> </h2>
+    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
   <% end %>
-  <% else %>
+<% else %>
   <h2>  No restaurants have been added yet </h2>
-  <% end %>
+<% end %>
 
 
-<a href='#'>Add a restaurant </a>
+<%= link_to 'Add a restaurant', new_restaurant_path %>
