--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,14 +1,19 @@
 
-
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
-    <h2> <%= restaurant.name %> </h2>
+    <h2><%= restaurant.name %></h2>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
-     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+
+    <ul>
+      <% restaurant.reviews.each do |review| %>
+        <li><%= "#{review.thoughts} (#{review.raiting})" %></li>
+      <% end %>
+    </ul>
   <% end %>
 <% else %>
-  <h2>  No restaurants have been added yet </h2>
+  No restaurants yet
 <% end %>
-
 
 <%= link_to 'Add a restaurant', new_restaurant_path %>
