Average Rating added

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,8 +2,8 @@
   <%= f.label :thoughts %>
   <%= f.text_area :thoughts %>
 
-  <%= f.label :raiting %>
-  <%= f.select :raiting, (1..5) %>
+  <%= f.label :rating %>
+  <%= f.select :rating, (1..5) %>
 
   <%= f.submit 'Leave review' %>
 <% end %>
