--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,7 +8,7 @@
 
     <ul>
       <% restaurant.reviews.each do |review| %>
-        <li><%= "#{review.thoughts} (#{review.raiting})" %></li>
+        <li><%= "#{review.thoughts} (#{review.rating})" %></li>
       <% end %>
     </ul>
   <% end %>
