--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -2,5 +2,23 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
+  <%= f.label :street %>
+  <%= f.text_field :street %>
+
+  <%= f.label :city %>
+  <%= f.text_field :city %>
+
+  <%= f.label :postcode %>
+  <%= f.text_field :postcode %>
+
+  <%= f.label :tel %>
+  <%= f.text_field :tel %>
+
+  <%= f.label :kind %>
+  <%= f.text_field :kind %>
+
+  <%= f.label :description %>
+  <%= f.text_field :description %>
+
   <%= f.submit %>
 <% end %>
