--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -9,18 +9,21 @@
     <h4>Type:<%= restaurant.kind %></h4>
     <h4>Description:<%= restaurant.description %></h4>
     <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
+    <h4>Created by <%=User.find(restaurant.user_id).email %> </h4>
 
     <ul>
       <% restaurant.reviews.each do |review| %>
-        <li><%= "#{review.thoughts} (#{star_rating(review.rating)})" %>- <em>Posted <%=time_ago_in_words(review.created_at)%> ago</em></li>
+        <li><%= "#{review.thoughts} (#{star_rating(review.rating)})"  %>- <em>Posted <%=time_ago_in_words(review.created_at)%> ago by <%=User.find(review.user_id).email %> </em></li>
       <% end %>
     </ul>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
 
+  <% if user_signed_in? %>
    <% unless restaurant.has_been_reviewed_by?(current_user) %>
       <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
     <% end %>
+  <% end %>
 
   <% end %>
 <% else %>
