--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,23 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta charset='utf8'>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+  <link rel="stylesheet" href="sea_stylesheet.css" type="text/css" charset="utf-8" />
 </head>
 <body>
+  <nav>
+      <div id='logo_text'>Yelp!</div>
+<%= link_to 'Add a restaurant', new_restaurant_path %>
+
+    <% if user_signed_in? %>
+      Logged in as <%= current_user.email %>
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign in', new_user_session_path %>
+      <%= link_to 'Sign up', new_user_registration_path %>
+    <% end %>
+  </nav>
 <%= notice %>
-<% if user_signed_in? %>
-  Logged in as <%= current_user.email %>
-  <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to 'Sign in', new_user_session_path %>
-  <%= link_to 'Sign up', new_user_registration_path %>
-<% end %>
 <%= yield %>
 
 </body>
