--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,70 @@
  *= require_tree .
  *= require_self
  */
+
+ nav {
+  background-color: #1CC8CC;
+  padding: 10px;
+  top:0;
+ }
+
+ body {
+   font-family: 'junction_regularregular';
+ }
+
+ @font-face {
+    font-family: 'junction_regularregular';
+    src: url('Junction-webfont.eot');
+    src: url('Junction-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Junction-webfont.woff') format('woff'),
+         url('Junction-webfont.ttf') format('truetype'),
+         url('Junction-webfont.svg#junction_regularregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'seasideresortnfregular';
+    src: url('SEASRN__-webfont.eot');
+    src: url('SEASRN__-webfont.eot?#iefix') format('embedded-opentype'),
+         url('SEASRN__-webfont.woff') format('woff'),
+         url('SEASRN__-webfont.ttf') format('truetype'),
+         url('SEASRN__-webfont.svg#seasideresortnfregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+ #logo_text {
+  background-color: black;
+  border-radius: 100%;
+    border: 3.5px solid #fff;
+  color: white;
+  width: 255px;
+  height: 255px;
+  margin:0 auto;
+  font-size: 75px;
+  font-family: 'seasideresortnfregular';
+  height: 250px;
+  text-align: center;
+  line-height: 250px;
+ }
+
+ a {
+  display: inline-block;
+  width: 110px;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  text-decoration: none;
+  padding: 5px 10px;
+  text-align: center;
+  border-radius: 4px;
+  margin-left: 5px;
+  margin-right: 10px;
+
+}
+
+ }
+
