--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,20 +2,22 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <h2><%= restaurant.name %></h2>
-    <h4><%= restaurant.street %></h4>
-    <h4><%= restaurant.city %></h4>
-    <h4><%= restaurant.postcode %></h4>
-    <h4>Tel:<%= restaurant.tel %></h4>
-    <h4>Type:<%= restaurant.kind %></h4>
-    <h4>Description:<%= restaurant.description %></h4>
-    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <h4>Created by <%=User.find(restaurant.user_id).email %> </h4>
-
+    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <ul>
       <% restaurant.reviews.each do |review| %>
-        <li><%= "#{review.thoughts} (#{star_rating(review.rating)})"  %>- <em>Posted <%=time_ago_in_words(review.created_at)%> ago by <%=User.find(review.user_id).email %> </em></li>
+        <li><%= "#{review.thoughts} (#{star_rating(review.rating)})"  %> </li>
+        <li> <em>Posted <%=time_ago_in_words(review.created_at)%> ago by <%=User.find(review.user_id).email %> </em></li>
       <% end %>
     </ul>
+     <h4>Info: <%= restaurant.description %>, <%= restaurant.kind %></h4>
+    <h4><%= restaurant.street %>, <%= restaurant.city %>, <%= restaurant.postcode %> </h4>
+    <h4>Tel: <%= restaurant.tel %></h4>
+
+
+
+
+
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
 
@@ -30,4 +32,3 @@
   No restaurants yet
 <% end %>
 
-<%= link_to 'Add a restaurant', new_restaurant_path %>
