--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,42 +14,55 @@
  *= require_self
  */
 
- nav {
-  background-color: #1CC8CC;
-  padding: 10px;
-  top:0;
- }
+
+   @font-face {
+      font-family: 'junction_regularregular';
+      src: url('Junction-webfont.eot');
+      src: url('Junction-webfont.eot?#iefix') format('embedded-opentype'),
+           url('Junction-webfont.woff') format('woff'),
+           url('Junction-webfont.ttf') format('truetype'),
+           url('Junction-webfont.svg#junction_regularregular') format('svg');
+      font-weight: normal;
+      font-style: normal;
+  }
+
+  @font-face {
+      font-family: 'seasideresortnfregular';
+      src: url('SEASRN__-webfont.eot');
+      src: url('SEASRN__-webfont.eot?#iefix') format('embedded-opentype'),
+           url('SEASRN__-webfont.woff') format('woff'),
+           url('SEASRN__-webfont.ttf') format('truetype'),
+           url('SEASRN__-webfont.svg#seasideresortnfregular') format('svg');
+      font-weight: normal;
+      font-style: normal;
+  }
 
  body {
    font-family: 'junction_regularregular';
+
  }
 
- @font-face {
-    font-family: 'junction_regularregular';
-    src: url('Junction-webfont.eot');
-    src: url('Junction-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Junction-webfont.woff') format('woff'),
-         url('Junction-webfont.ttf') format('truetype'),
-         url('Junction-webfont.svg#junction_regularregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+ nav {
+  background-color: #1CC8CC;
+  padding: 10px;
 
-@font-face {
-    font-family: 'seasideresortnfregular';
-    src: url('SEASRN__-webfont.eot');
-    src: url('SEASRN__-webfont.eot?#iefix') format('embedded-opentype'),
-         url('SEASRN__-webfont.woff') format('woff'),
-         url('SEASRN__-webfont.ttf') format('truetype'),
-         url('SEASRN__-webfont.svg#seasideresortnfregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+ /* top: 0px;
+  position: absolute;*/
+ }
+
+ #user_management{
+  display: inline-block;
+  position: absolute;
+  top: 80px;
+  right: 150px;
+  text-align: right;
+ }
+
 
  #logo_text {
   background-color: black;
   border-radius: 100%;
-    border: 3.5px solid #fff;
+  border: 3.5px solid #fff;
   color: white;
   width: 255px;
   height: 255px;
@@ -61,22 +74,64 @@
   line-height: 250px;
  }
 
+
  a {
   display: inline-block;
   width: 110px;
   cursor: pointer;
   font-size: 16px;
-  background-color: white;
+  background-color: #1CC8CC;
   border: 2px solid black;
-  color: black;
+  color: white;
   text-decoration: none;
-  padding: 5px 10px;
+  padding: 7px 8px;
   text-align: center;
   border-radius: 4px;
-  margin-left: 5px;
-  margin-right: 10px;
+  margin: 0px 5px;
+}
+
+section {
+  width: 45%;
+  border: 2px solid black;
+  border-radius: 4px;
+  text-align: center;
+  margin: 20px;
+  display: inline-block;
 
 }
 
- }
+
+h2 {
+  font-family: 'seasideresortnfregular';
+}
+
+h1 {font-size: 20px;
+font-family: 'Josefin Slab', serif;}
+#name {
+
+  font-size: 30px;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  margin-top: 15px;
+
+}
+
+h4 {
+  margin-right: 10px;
+  font-style: italic;
+  font-size: 12px;
+  display: inline;
+}
+
+#created_by {
+  display: block;
+}
+
+ul {
+  list-style-type: none;
+  line-height: 30px;
+  text-align: left;
+  text-indent: 5px;
+}
 
