--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,34 +1,38 @@
 
-<% if @restaurants.any? %>
+  <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
-    <h2><%= restaurant.name %></h2>
-    <h4>Created by <%=User.find(restaurant.user_id).email %> </h4>
-    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
+  <section>
+    <h1 id='name'><%= restaurant.name %></h1>
+
+    <h3><%= restaurant.description %> <%= restaurant.kind %></h3>
+
+    <h3><%= restaurant.street %>, <%= restaurant.city %>, <%= restaurant.postcode %> </h3>
+    <h3>Tel: <%= restaurant.tel %></h3>
+
+    <h2>Average rating: <%= star_rating(restaurant.average_rating) %></h2>
+
     <ul>
       <% restaurant.reviews.each do |review| %>
-        <li><%= "#{review.thoughts} (#{star_rating(review.rating)})"  %> </li>
-        <li> <em>Posted <%=time_ago_in_words(review.created_at)%> ago by <%=User.find(review.user_id).email %> </em></li>
+        <li><%= "#{review.thoughts} (#{star_rating(review.rating)})"%><h4>- Posted <%=time_ago_in_words(review.created_at)%> ago by <%=User.find(review.user_id).email %> </h4></li>
       <% end %>
     </ul>
-     <h4>Info: <%= restaurant.description %>, <%= restaurant.kind %></h4>
-    <h4><%= restaurant.street %>, <%= restaurant.city %>, <%= restaurant.postcode %> </h4>
-    <h4>Tel: <%= restaurant.tel %></h4>
+
+      <%= link_to "Edit", edit_restaurant_path(restaurant) %>
 
 
+    <%= link_to "Delete", restaurant_path(restaurant), method: :delete %>
 
-
-
-    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
-    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
-
-  <% if user_signed_in? %>
-   <% unless restaurant.has_been_reviewed_by?(current_user) %>
-      <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+    <% if user_signed_in? %>
+       <% unless restaurant.has_been_reviewed_by?(current_user) %>
+         <%= link_to "Review", new_restaurant_review_path(restaurant) %>
+          <% end %>
     <% end %>
+      <h4 id='created_by'>Created by <%=User.find(restaurant.user_id).email %> </h4>
+      </section>
   <% end %>
 
+  <% else %>
+    No restaurants yet
   <% end %>
-<% else %>
-  No restaurants yet
-<% end %>
+
 
