--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,7 +11,7 @@
 
     <h2>Average rating: <%= star_rating(restaurant.average_rating) %></h2>
 
-    <ul>
+    <ul id="list_reviews">
       <% restaurant.reviews.each do |review| %>
         <li><%= "#{review.thoughts} (#{star_rating(review.rating)})"%><h4>- Posted <%=time_ago_in_words(review.created_at)%> ago by <%=User.find(review.user_id).email %> </h4></li>
       <% end %>
