--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div><%= f.button "Sign up", class: 'signup-btn' %></div>
+  <div><%= f.button "Sign up", class: 'form-btn' %></div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
