--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -28,7 +28,7 @@
     <%= f.text_field :tel %>
 
     <%= f.label :kind %>
-    <%= f.select :kind, options_for_select(%w[Restaurant Shop Market]) %>
+    <%= f.select :kind, options_for_select(%w[Restaurant Shop Market])  %> <br/><br/>
 
     <%= f.label :description %>
     <%= f.text_field :description %>
