--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,22 +17,22 @@
 
    @font-face {
       font-family: 'junction_regularregular';
-      src: url('Junction-webfont.eot');
-      src: url('Junction-webfont.eot?#iefix') format('embedded-opentype'),
-           url('Junction-webfont.woff') format('woff'),
-           url('Junction-webfont.ttf') format('truetype'),
-           url('Junction-webfont.svg#junction_regularregular') format('svg');
+      src: font-url('Junction-webfont.eot');
+      src: font-url('Junction-webfont.eot?#iefix') format('embedded-opentype'),
+           font-url('Junction-webfont.woff') format('woff'),
+           font-url('Junction-webfont.ttf') format('truetype'),
+           font-url('Junction-webfont.svg#junction_regularregular') format('svg');
       font-weight: normal;
       font-style: normal;
   }
 
   @font-face {
       font-family: 'seasideresortnfregular';
-      src: url('SEASRN__-webfont.eot');
-      src: url('SEASRN__-webfont.eot?#iefix') format('embedded-opentype'),
-           url('SEASRN__-webfont.woff') format('woff'),
-           url('SEASRN__-webfont.ttf') format('truetype'),
-           url('SEASRN__-webfont.svg#seasideresortnfregular') format('svg');
+      src: font-url('SEASRN__-webfont.eot');
+      src: font-url('SEASRN__-webfont.eot?#iefix') format('embedded-opentype'),
+           font-url('SEASRN__-webfont.woff') format('woff'),
+           font-url('SEASRN__-webfont.ttf') format('truetype'),
+           font-url('SEASRN__-webfont.svg#seasideresortnfregular') format('svg');
       font-weight: normal;
       font-style: normal;
   }
