--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -32,7 +32,7 @@
   <% end %>
 
   <% else %>
-    <h2 class="form_input">No restaurants yet<h2>
+    <h2 id="empty">No restaurants yet<h2>
   <% end %>
 
 
