--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -198,7 +198,7 @@ form {
 
 }
 
-#form_title{
+.form_title{
   text-align: left;
   margin-left: 40px;
 }
@@ -213,6 +213,11 @@ nav.a {
   color: red;
 }
 
+#empty {
+  text-align: center;
+  font-size: 70px;
+  margin-top: 100px;
+}
 
 
 
